CF-206: Fix uneven form input spacing

--- a/src/shared/assets/styles/components/_inputs.scss
+++ b/src/shared/assets/styles/components/_inputs.scss
@@ -80,7 +80,6 @@ select {
 
 .vfl-has-label {
   display: block;
-  margin-top: 10px;
 }
 .vfl-label {
   padding: 0 4px;
